--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aframe": "^1.2.0",
     "aframe-auto-detect-controllers-component": "^0.1.4",
     "aframe-event-set-component": "^5.0.0",
-    "aframe": "^1.2.0",
     "aframe-react": "^4.4.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.4.1"
   }
 }
